--- a/Snake.csproj
+++ b/Snake.csproj
@@ -292,6 +292,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Button.cs" />
+    <Compile Include="Assets\Scripts\GameControllerSnake.cs" />
     <Compile Include="Assets\Scripts\SnakeBody.cs" />
     <Compile Include="Assets\Scripts\SnakeMovements.cs" />
     <Compile Include="Assets\Scripts\TouchInput.cs" />
