--- a/Snake.csproj
+++ b/Snake.csproj
@@ -291,8 +291,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CubeBonus.cs" />
     <Compile Include="Assets\Scripts\Button.cs" />
     <Compile Include="Assets\Scripts\GameControllerSnake.cs" />
+    <Compile Include="Assets\Scripts\ScoreUpdate.cs" />
+    <Compile Include="Assets\Scripts\showResults.cs" />
     <Compile Include="Assets\Scripts\SnakeBody.cs" />
     <Compile Include="Assets\Scripts\SnakeMovements.cs" />
     <Compile Include="Assets\Scripts\TouchInput.cs" />
